fix: correct back button alignment

--- a/src/pages/AboutUs/AboutUs.module.scss
+++ b/src/pages/AboutUs/AboutUs.module.scss
@@ -25,7 +25,7 @@
     margin-bottom: 66px;
 
     h1 {
-      padding: 66px 0 26px;
+      padding: 0 0 26px;
       margin: 0;
     }
 
